--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -2647,9 +2647,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f1f746b",
+   "metadata": {},
+   "source": [
+    "## 10.Scenario Q10\n",
+    "### Discover Users with High Engagement but Low Follower Count\n",
+    "Twitter is interested in identifying users who are highly engaged on the platform but\n",
+    "have relatively few followers. Recognizing and promoting such users could potentially\n",
+    "diversify the content on the platform and improve overall user engagement.\n",
+    "Specific Task:\n",
+    "Find the top 5 users who have sent the most messages but have fewer than 100\n",
+    "followers. Display their UserID, Username, FullName, MessageCount, and\n",
+    "FollowerCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "9ca9bc13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>UserID</th>\n",
+       "        <th>Username</th>\n",
+       "        <th>FullName</th>\n",
+       "        <th>MessageCount</th>\n",
+       "        <th>FollowerCount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>148.0</td>\n",
+       "        <td>carolyn81</td>\n",
+       "        <td>Tracy Mccall</td>\n",
+       "        <td>4</td>\n",
+       "        <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>210.0</td>\n",
+       "        <td>burnsphillip</td>\n",
+       "        <td>Ethan Reyes</td>\n",
+       "        <td>4</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>303.0</td>\n",
+       "        <td>camposjulia</td>\n",
+       "        <td>Felicia Moody</td>\n",
+       "        <td>4</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>381.0</td>\n",
+       "        <td>jamesrichards</td>\n",
+       "        <td>Mr. Larry Oliver</td>\n",
+       "        <td>4</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>413.0</td>\n",
+       "        <td>huffmanmegan</td>\n",
+       "        <td>Jeremy Holt</td>\n",
+       "        <td>4</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(148.0, 'carolyn81', 'Tracy Mccall', 4, 2),\n",
+       " (210.0, 'burnsphillip', 'Ethan Reyes', 4, 0),\n",
+       " (303.0, 'camposjulia', 'Felicia Moody', 4, 1),\n",
+       " (381.0, 'jamesrichards', 'Mr. Larry Oliver', 4, 1),\n",
+       " (413.0, 'huffmanmegan', 'Jeremy Holt', 4, 0)]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    u.UserID,\n",
+    "    u.Username,\n",
+    "    u.FullName,\n",
+    "    COUNT(DISTINCT m.MessageID) AS MessageCount,\n",
+    "    COUNT(DISTINCT f.FollowerID) AS FollowerCount\n",
+    "FROM\n",
+    "    users u\n",
+    "LEFT JOIN directmessages m\n",
+    "ON u.UserID = m.SenderID\n",
+    "LEFT JOIN followers f\n",
+    "ON u.UserID = f.FollowedUserID\n",
+    "GROUP BY\n",
+    "    u.UserID, u.Username, u.FullName\n",
+    "HAVING\n",
+    "    FollowerCount < 100\n",
+    "ORDER BY\n",
+    "    MessageCount DESC\n",
+    "LIMIT 5;\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1f746b",
+   "id": "39048328",
    "metadata": {},
    "outputs": [],
    "source": []
