--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 111,
    "id": "8fa8b72d",
    "metadata": {},
    "outputs": [
@@ -2628,7 +2628,7 @@
        "[('Follow', 176), ('Like', 167), ('Comment', 157)]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2637,7 +2637,7 @@
     "%%sql\n",
     "SELECT\n",
     "    notificationtype,\n",
-    "    COUNT(notificationID) AS NumberOfNotification\n",
+    "    COUNT(DISTINCT notificationID) AS NumberOfNotification\n",
     "FROM\n",
     "    notifications\n",
     "GROUP BY\n",
@@ -8909,8 +8909,123 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 110,
    "id": "706c2e42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>UserID</th>\n",
+       "        <th>Username</th>\n",
+       "        <th>FullName</th>\n",
+       "        <th>TweetID</th>\n",
+       "        <th>LikeCount</th>\n",
+       "        <th>RetweetCount</th>\n",
+       "        <th>MentionCount</th>\n",
+       "        <th>TotalCountInteractions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>305.0</td>\n",
+       "        <td>jason06</td>\n",
+       "        <td>Dennis Davis</td>\n",
+       "        <td>245.0</td>\n",
+       "        <td>5</td>\n",
+       "        <td>2</td>\n",
+       "        <td>4</td>\n",
+       "        <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>83.0</td>\n",
+       "        <td>jeremysandoval</td>\n",
+       "        <td>Edward Summers</td>\n",
+       "        <td>426.0</td>\n",
+       "        <td>2</td>\n",
+       "        <td>4</td>\n",
+       "        <td>3</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>44.0</td>\n",
+       "        <td>mcmahonanna</td>\n",
+       "        <td>Morgan Jackson</td>\n",
+       "        <td>217.0</td>\n",
+       "        <td>4</td>\n",
+       "        <td>3</td>\n",
+       "        <td>1</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(305.0, 'jason06', 'Dennis Davis', 245.0, 5, 2, 4, 11),\n",
+       " (83.0, 'jeremysandoval', 'Edward Summers', 426.0, 2, 4, 3, 9),\n",
+       " (44.0, 'mcmahonanna', 'Morgan Jackson', 217.0, 4, 3, 1, 8)]"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    u.UserID, u.Username, u.FullName,\n",
+    "    t.TweetID,\n",
+    "    COUNT(DISTINCT l.LikeID) AS LikeCount,\n",
+    "    COUNT(DISTINCT rt.RetweetID) AS RetweetCount,\n",
+    "    COUNT(DISTINCT men.MentionID) AS MentionCount,\n",
+    "    (\n",
+    "        COUNT(DISTINCT l.LikeID) +\n",
+    "        COUNT(DISTINCT rt.RetweetID) +\n",
+    "        COUNT(DISTINCT men.MentionID)\n",
+    "    ) AS TotalCountInteractions\n",
+    "FROM\n",
+    "    users u\n",
+    "LEFT JOIN tweets t\n",
+    "ON u.UserID = t.UserID\n",
+    "LEFT JOIN likes l\n",
+    "ON t.TweetID = l.TweetID\n",
+    "LEFT JOIN retweets rt\n",
+    "ON t.TweetID = rt.OriginalTweetID\n",
+    "LEFT JOIN mentions men\n",
+    "ON t.TweetID = men.TweetID\n",
+    "GROUP BY\n",
+    "    u.UserID, u.Username, u.FullName, t.TweetID\n",
+    "ORDER BY\n",
+    "    TotalCountInteractions DESC\n",
+    "LIMIT 3;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "295cc339",
+   "metadata": {},
+   "source": [
+    "## 13. Scenario Q13\n",
+    "### Find Users Who Have Never Been Mentioned\n",
+    "Twitter is interested in increasing interactions among users. The company wants to\n",
+    "identify users who have never been mentioned by others so that it can encourage more\n",
+    "interactions involving these users.\n",
+    "The task is to retrieve a list of UserID, Username, and FullName of users who have\n",
+    "never been mentioned in any tweets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e22faf7",
    "metadata": {},
    "source": []
   }
