--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -10154,9 +10154,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39db4238",
+   "metadata": {},
+   "source": [
+    "## 14. Scenario Q14\n",
+    "##### Analyse the Average Number of Followers per User\n",
+    "Twitter wants to analyse the average number of followers that users on the platform\n",
+    "have. This will help Twitter understand the distribution of followers and identify whether\n",
+    "the platform has a balanced user interaction or is dominated by a few users with a\n",
+    "large number of followers. The task is to calculate the average number of followers\n",
+    "that users on the platform have."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "6028c624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>AvgFollowersPerUser</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1.59</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(Decimal('1.59'),)]"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT \n",
+    "    ROUND(AVG(FollowersCount), 2) AS AvgFollowersPerUser\n",
+    "FROM (\n",
+    "    SELECT \n",
+    "        FollowedUserID AS UserID,\n",
+    "        COUNT(FollowerUserID) AS FollowersCount\n",
+    "    FROM Followers\n",
+    "    GROUP BY FollowedUserID\n",
+    ") AS UserFollowers;\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39db4238",
+   "id": "f9295420",
    "metadata": {},
    "outputs": [],
    "source": []
