--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -10217,9 +10217,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9295420",
+   "metadata": {},
+   "source": [
+    "## 15. Scenario Q15\n",
+    "### Identify Users with the Most Diverse Engagement\n",
+    "Twitter is looking to recognise and possibly reward users who engage diversely on the\n",
+    "platform, participating in various activities like sending messages, liking tweets,\n",
+    "retweeting, and being mentioned. Identifying such users can help Twitter promote\n",
+    "diverse engagement across the platform.\n",
+    "The task requires finding the top 3 users who have participated in the most diverse\n",
+    "activities (sending messages, liking tweets, retweeting, being mentioned). Display their\n",
+    "UserID, Username, FullName, and the count of different activities they have engaged\n",
+    "in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "ba413a62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>UserID</th>\n",
+       "        <th>Username</th>\n",
+       "        <th>FullName</th>\n",
+       "        <th>ActivityCount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>321.0</td>\n",
+       "        <td>bryceguerra</td>\n",
+       "        <td>Tonya Andrews</td>\n",
+       "        <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>21.0</td>\n",
+       "        <td>cbaker</td>\n",
+       "        <td>Robin Bailey</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3.0</td>\n",
+       "        <td>charlesjohnson</td>\n",
+       "        <td>Maria Mckay</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(321.0, 'bryceguerra', 'Tonya Andrews', 11),\n",
+       " (21.0, 'cbaker', 'Robin Bailey', 10),\n",
+       " (3.0, 'charlesjohnson', 'Maria Mckay', 9)]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    u.UserID,\n",
+    "    u.Username,\n",
+    "    u.FullName,\n",
+    "    (COUNT(DISTINCT dm.MessageID) +\n",
+    "     COUNT(DISTINCT l.LikeID) +\n",
+    "     COUNT(DISTINCT r.RetweetID) +\n",
+    "     COUNT(DISTINCT m.MentionID)) AS ActivityCount\n",
+    "FROM Users u\n",
+    "LEFT JOIN DirectMessages dm ON u.UserID = dm.SenderID\n",
+    "LEFT JOIN Likes l ON u.UserID = l.UserID\n",
+    "LEFT JOIN Retweets r ON u.UserID = r.UserID\n",
+    "LEFT JOIN Mentions m ON u.UserID = m.MentionedUserID\n",
+    "GROUP BY u.UserID, u.Username, u.FullName\n",
+    "ORDER BY ActivityCount DESC\n",
+    "LIMIT 3 OFFSET 0;\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9295420",
+   "id": "b4680016",
    "metadata": {},
    "outputs": [],
    "source": []
